--- a/package.json
+++ b/package.json
@@ -8,16 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "canvg": "^4.0.3",
+    "clsx": "^2.1.1",
+    "dexie": "^4.2.0",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
+    "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "react-hook-form": "^7.62.0",
+    "tailwind-merge": "^2.6.0",
+    "zod": "^4.1.4"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@tailwindcss/postcss": "^4.1.12",
+    "@types/node": "^20.19.11",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4",
+    "typescript": "^5.9.2"
   }
 }
